@startuml Book Hub ERD

' !pragma ratio 0.2

skinparam linetype ortho
hide circles

'Book, Rating, Genre, Author, Publisher'
entity Book {
    *Id : int
    AuthorId : int <<FK>>
    PublisherId : int <<FK>>
    PriceId : int <<FK>>
    ---
    Name : varchar(255)
    ISBN : varchar(255)
    PublicationDate : timestamp
    Description : varchar(255)
}

entity Rating {
    *Id : int
    UserId : int <<FK>>
    BookId : int <<FK>>
    ---
    Stars : int
    Review : varchar(1024)
}

entity Genre {
    *Id : int
    ---
    Name : varchar(255)
}

entity Author {
    *Id : int
    ---
    FirstName : varchar(255)
    LastName : varchar(255)
    DateOfBirth : timestamp
    DateOfDeath : timestamp
}

entity Publisher {
    *Id : int
    ---
    Name : varchar(255)
    PhoneNumber : varchar(32)
    Email : varchar(255)
}

entity Price {
    *Id : int
    BookId : int <<FK>>
    ---
    Price : decimal(10,2)
    Currency : varchar(255)
    Date : timestamp
}

'User, Wishlist, Wishlist_Book'
entity Wishlist {
    *Id : int
    UserId : int <<FK>>
    ---
    Name : varchar(255)
}

entity User {
    *Id : int
    ---
    FirstName : varchar(255)
    LastName : varchar(255)
    Gender: varchar(255)
    Email : varchar(255)
    PasswordHash : varchar(255)
    IsAdmin : boolean
}

'Purchase'
entity Purchase {
    *Id : int
    UserId : int <<FK>>
    ---
    Date : timestamp
}

entity Purchase_Book {
    *Id : int
    Price: decimal(10, 2)
    ---
    PurchaseId : int <<FK>>
    BookId : int <<FK>>
}


Book }o.o{ Wishlist
Book }o.left.o{ Genre

Book ||...o{ Price

Author }|...o{ Book


Publisher ||..o{ Book

User ||..o{ Wishlist

Rating }o..|| Book
Rating }o..|| User

Purchase ||..o{ Purchase_Book
Purchase }o..|| User
Purchase_Book }o..|| Book

@enduml
